--- a/mobil.html
+++ b/mobil.html
@@ -3,11 +3,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Animal</title>
 <!--http://www.tayangu.com/mobil/-->
-<link rel="stylesheet" type="text/css" href="codes/jquery-ui.css" />
-<link rel="stylesheet" type="text/css" href="codes/mycssframework.css" />
-<script type="text/javascript" src="codes/jquery.js"></script>
-<script type="text/javascript" src="codes/jquery-ui.js"></script>
-<script type="text/javascript" src="codes/functions.js"></script>
+<link rel="stylesheet" type="text/css" href="jquery-ui.css" />
+<link rel="stylesheet" type="text/css" href="mycssframework.css" />
+<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="functions.js"></script>
 </head>
 <body onLoad="openPageOnLoad();">
 </body>
