--- a/mobil.html
+++ b/mobil.html
@@ -5,7 +5,7 @@
 <!--http://www.tayangu.com/mobil/-->
 <link rel="stylesheet" type="text/css" href="jquery-ui.css" />
 <link rel="stylesheet" type="text/css" href="mycssframework.css" />
-<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="functions.js"></script>
 </head>
 <body onLoad="openPageOnLoad();">
