--- a/mobil.html
+++ b/mobil.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="functions.js"></script>
 </head>
-<body onLoad="openPageOnLoad();">
+<body>
+<iframe src="http://www.tayangu.com/mobil/pages/index.html"></iframe>
 </body>
 </html>
